--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "startd": "nodemon Server.js"
+    "startd": "nodemon Server.js",
+    "start" : "node Server.js"
   },
   "keywords": [
     "Dashboard",
