--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^23.5.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   },
   "dependencies": {
