Added .gitlab-ci.yml to integrate into GitLab CI/CD \n also fixed the Testsuit in Dashapi.test.js, no more errors, nor warnings... i had previously mixed up Promises and callbacks. .

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Server.js",
   "scripts": {
     "testd": " nodemon --exec \"npm test\" ",
-    "test": "jest **/*.test.js",
+    "test": "jest **/*.test.js --detectOpenHandles",
     "startd": "nodemon Server.js",
     "start": "node Server.js"
   },
