--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,16 @@
 image: docker:latest
+
+services:
+  - docker:dind
 stages:
   - test
   - build
   - deploy
   - production
+
 variables:
     MONGOURI: $MONGOURI
+    CONTAINER_IMAGE: registry.gitlab.com/pablokiryu2/dashapi:latest
 
 TESTNPM:
   variables:
@@ -20,24 +25,33 @@ Build Container:
   stage: build
   tags: 
     - docker
-  services:
-    - docker:dind
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -t registry.gitlab.com/pablokiryu2/dashapi .
     - docker push registry.gitlab.com/pablokiryu2/dashapi
+Staging:
+  stage: deploy
+  tags:
+    - docker
+  only:
+    - master
+  script:
+    - docker login --username=HEROKU_USR --password=$HEROKU_Auth registry.heroku.com
+    - docker pull $CONTAINER_IMAGE:staging
+    - docker tag $CONTAINER_IMAGE:staging registry.heroku.com/pablokiryu/murmuring-wave-13155/web
+    - docker push rregistry.heroku.com/pablokiryu/murmuring-wave-13155/web
+    - docker run --rm -e HEROKU_API_KEY=$HEROKU_Auth wingrunr21/alpine-heroku-cli container:release web --app $STAGEAPP
 
 Staging:
   stage: deploy
-  script:
-    - docker login --username=$HEROKU_USR --password=$HEROKU_Auth registry.heroku.com
-    - docker tag registry.gitlab.com/pablokiryu2/dashapi:latest registry.heroku.com/pablokiryu/murmuring-wave-13155:latest
-    - docker push registry.heroku.com/Pablokiryu/murmuring-wave-13155:latest
-
-Production:
-  stage: production
+  tags:
+    - docker
+  only:
+    - master
   when: manual
   script:
-    - docker login --username=$HEROKU_USR --password=$HEROKU_Auth registry.heroku.com
-    - docker tag registry.gitlab.com/Pablokiryu/dashapi:latest registry.heroku.com/pablokiryu/dashbapi:latest
-    - docker push registry.heroku.com/Pablokiryu/dashbapi:latest
+    - docker login --username=HEROKU_USR --password=$HEROKU_Auth registry.heroku.com
+    - docker pull $CONTAINER_IMAGE:staging
+    - docker tag $CONTAINER_IMAGE:staging registry.heroku.com/pablokiryu/dashbapi/web
+    - docker push rregistry.heroku.com/pablokiryu/dashbapi/web
+    - docker run --rm -e HEROKU_API_KEY=$HEROKU_Auth wingrunr21/alpine-heroku-cli container:release web --app $PRODAPP
